@@ -64,7 +64,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Generates Service Template Snippet completion items.
@@ -163,9 +162,8 @@ public class ServiceTemplateGenerator {
                     || moduleInfo.isModuleFromCurrentPackage()) {
                 return;
             }
-            moduleInfo.getListenerMetaData().forEach(listenerMetaData -> {
-                completionItems.add(generateServiceSnippet(listenerMetaData, ctx));
-            });
+            moduleInfo.getListenerMetaData().forEach(listenerMetaData ->
+                completionItems.add(generateServiceSnippet(listenerMetaData, ctx)));
             processedModuleList.add(moduleInfo.getModuleIdentifier());
         });
         return completionItems;
@@ -222,7 +220,7 @@ public class ServiceTemplateGenerator {
 
         //Check if the first parameter of the attach method is a subtype of service object.
         Optional<List<ParameterSymbol>> params = attachMethod.typeDescriptor().params();
-        if (params.isEmpty() || params.get().size() == 0) {
+        if (params.isEmpty() || params.get().isEmpty()) {
             return Optional.empty();
         }
         TypeSymbol typeSymbol = CommonUtil.getRawType(params.get().get(0).typeDescriptor());
@@ -251,7 +249,7 @@ public class ServiceTemplateGenerator {
             List<String> args = new ArrayList<>();
             List<ParameterSymbol> requiredParams = initMethod.get().typeDescriptor().params().get().stream()
                     .filter(parameterSymbol ->
-                            parameterSymbol.paramKind() == ParameterKind.REQUIRED).collect(Collectors.toList());
+                            parameterSymbol.paramKind() == ParameterKind.REQUIRED).toList();
             for (ParameterSymbol parameterSymbol : requiredParams) {
                 args.add("${" + snippetIndex + ":" +
                         DefaultValueGenerationUtil.getDefaultPlaceholderForType(parameterSymbol.typeDescriptor())
@@ -274,7 +272,7 @@ public class ServiceTemplateGenerator {
         ImportsAcceptor importsAcceptor = new ImportsAcceptor(context);
         String modulePrefix = ModuleUtil.getModulePrefix(importsAcceptor, getCurrentModuleID(context),
                 serviceSnippet.moduleID, context);
-        Boolean shouldImport = importsAcceptor.getNewImports().size() > 0;
+        Boolean shouldImport = !importsAcceptor.getNewImports().isEmpty();
         String moduleAlias = modulePrefix.replace(":", "");
         String moduleName = ModuleUtil.escapeModuleName(serviceSnippet.moduleID.moduleName());
 
